load("@rules_cc//cc:defs.bzl", "cc_library")

licenses(["notice"])  # MIT

exports_files(["LICENSE"])

config_setting(
    name = "platform_windows",
    constraint_values = [
        "@platforms//os:windows",
    ],
)

config_setting(
    name = "platform_freebsd",
    constraint_values = [
        "@platforms//os:freebsd",
    ],
)

config_setting(
    name = "platform_openbsd",
    constraint_values = [
        "@platforms//os:openbsd",
    ],
)

SRCS = glob(
    [
        "quill/src/**/*.cpp",
        "quill/src/bundled/fmt/format.cc",
        "quill/src/bundled/fmt/os.cc",
    ],
)

HDRS = glob(
    [
        "quill/include/**/*.h",
    ],
)

INCLUDES = [
    "quill/include",
]

cc_library(
    name = "quill",
    srcs = SRCS,
    hdrs = HDRS,
    defines = [
        # Avoid ambiguity altogether.
        "QUILL_DISABLE_NON_PREFIXED_MACROS=1",
    ],
    includes = INCLUDES,
    linkopts = select({
        "//:platform_windows": [],
        "//conditions:default": [
            "-lpthread",
        ],
    }),
    linkstatic = True,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "quill_noexcept",
    srcs = SRCS,
    hdrs = HDRS,
    defines = [
        "QUILL_NO_EXCEPTIONS=1",
        # Avoid ambiguity altogether.
        "QUILL_DISABLE_NON_PREFIXED_MACROS=1",
    ],
    includes = INCLUDES,
    linkopts = select({
        "//:platform_windows": [],
        "//conditions:default": [
            "-lpthread",
        ],
    }),
    linkstatic = True,
    visibility = ["//visibility:public"],
)
