# include spdlog
# include_directories(/home/ody/CLionProjects/untitled/spdlog)

# call_site_latency_percentile_linux_benchmark
add_executable(call_site_latency_percentile_linux_benchmark)
target_sources(call_site_latency_percentile_linux_benchmark PRIVATE call_site_latency_percentile_linux.cpp)
target_link_libraries(call_site_latency_percentile_linux_benchmark PRIVATE quill Threads::Threads)
